# vision_pilot_model_recipes

./: README.md
middleware_recipes/: README.md
middleware_recipes/Calibration/: compute_homography.py  test_with_gt.py
middleware_recipes/IceOryx2/: CMakeLists.txt  README.md  frame_node.cpp  inference_node.cpp  run_pipeline.sh.template  transmission_data.hpp  viz_node.cpp
middleware_recipes/ROS2/: README.md
middleware_recipes/ROS2/PATHFINDER/: CMakeLists.txt  README.md  package.xml
middleware_recipes/ROS2/PATHFINDER/include/PATHFINDER/: estimator.hpp  path_finder.hpp  pathfinder_node.hpp
middleware_recipes/ROS2/PATHFINDER/src/: estimator.cpp  path_finder.cpp  pathfinder_node.cpp
middleware_recipes/ROS2/VisionPilot_0.5/: CMakeLists.txt  README.md  build_ort-gpu.sh  main.cpp  run_final.sh
middleware_recipes/ROS2/VisionPilot_0.5/include/camera/: camera_utils.hpp
middleware_recipes/ROS2/VisionPilot_0.5/include/config/: config_reader.hpp
middleware_recipes/ROS2/VisionPilot_0.5/include/drivers/: can_interface.hpp
middleware_recipes/ROS2/VisionPilot_0.5/include/inference/: autosteer_engine.hpp  lane_segmentation.hpp  onnxruntime_engine.hpp  onnxruntime_session.hpp  tensorrt_autosteer_engine.hpp  tensorrt_engine.hpp
middleware_recipes/ROS2/VisionPilot_0.5/include/lane_filtering/: lane_filter.hpp
middleware_recipes/ROS2/VisionPilot_0.5/include/lane_tracking/: lane_tracking.hpp
middleware_recipes/ROS2/VisionPilot_0.5/include/path_planning/: estimator.hpp  path_finder.hpp  poly_fit.hpp
middleware_recipes/ROS2/VisionPilot_0.5/include/publisher/: ipc_shared_state.hpp
middleware_recipes/ROS2/VisionPilot_0.5/include/rerun/: rerun_logger.hpp
middleware_recipes/ROS2/VisionPilot_0.5/include/steering_control/: steering_controller.hpp  steering_filter.hpp
middleware_recipes/ROS2/VisionPilot_0.5/include/visualization/: draw_lanes.hpp
middleware_recipes/ROS2/VisionPilot_0.5/src/: README.md
middleware_recipes/ROS2/VisionPilot_0.5/src/camera/: camera_utils.cpp
middleware_recipes/ROS2/VisionPilot_0.5/src/config/: config_reader.cpp
middleware_recipes/ROS2/VisionPilot_0.5/src/drivers/: can_interface.cpp
middleware_recipes/ROS2/VisionPilot_0.5/src/inference/: autosteer_engine.cpp  onnxruntime_engine.cpp  onnxruntime_session.cpp  tensorrt_autosteer_engine.cpp  tensorrt_engine.cpp
middleware_recipes/ROS2/VisionPilot_0.5/src/lane_filtering/: README.md  lane_filter.cpp
middleware_recipes/ROS2/VisionPilot_0.5/src/lane_tracking/: lane_tracking.cpp
middleware_recipes/ROS2/VisionPilot_0.5/src/path_planning/: estimator.cpp  poly_fit.cpp  (+1 more)
middleware_recipes/ROS2/VisionPilot_0.5/test/: test_autosteer.cpp
middleware_recipes/ROS2/longitudinal_controller/: CMakeLists.txt  README.md  package.xml
middleware_recipes/ROS2/longitudinal_controller/include/: longitudinal_controller_node.hpp
middleware_recipes/ROS2/longitudinal_controller/launch/: longitudinal_controller_launch.py
middleware_recipes/ROS2/longitudinal_controller/src/: longitudinal_controller_node.cpp
middleware_recipes/ROS2/models/: AUTOSPEED_SETUP.md  CMakeLists.txt  package.xml
middleware_recipes/ROS2/models/config/: auto3d.yaml  autoseg.yaml
middleware_recipes/ROS2/models/include/: run_autospeed_node.hpp  run_model_node.hpp
middleware_recipes/ROS2/models/launch/: autospeed.launch.py  run_pipeline.launch.py
middleware_recipes/ROS2/models/src/: run_autospeed_node.cpp  run_model_node.cpp
middleware_recipes/ROS2/sensors/: CMakeLists.txt
middleware_recipes/ROS2/sensors/include/: video_publisher_node.hpp
middleware_recipes/ROS2/steering_controller/: CMakeLists.txt  README.md  package.xml
middleware_recipes/ROS2/steering_controller/include/: steering_controller_node.hpp
middleware_recipes/ROS2/steering_controller/launch/: steering_controller_launch.py
middleware_recipes/ROS2/steering_controller/src/: steering_controller_node.cpp
middleware_recipes/ROS2/visualization/: CMakeLists.txt
middleware_recipes/ROS2/visualization/include/: visualize_depth_node.hpp  visualize_masks_node.hpp
middleware_recipes/ROS2/visualization/src/: visualize_depth_node.cpp  visualize_masks_node.cpp
middleware_recipes/Standalone/AutoSpeed/: CMakeLists.txt  batch_process_videos.sh.template  draw_det.cpp  draw_det.hpp  infer_stream.cpp  run_objectFinder.sh.template
middleware_recipes/Zenoh/: DEFAULT_CONFIG.json5  README.md  justfile
middleware_recipes/Zenoh/models/: README.md  run_model.cpp
middleware_recipes/Zenoh/video_pubsub/: README.md  depth_subscriber.cpp  segment_subscriber.cpp  video_subscriber.cpp
middleware_recipes/common/: README.md
middleware_recipes/common/backends/: onnx_runtime_backend.cpp  tensorrt_backend.cpp
middleware_recipes/common/backends/autospeed/: README.md  onnxruntime_engine.cpp  onnxruntime_session.cpp  onnxruntime_session.hpp  tensorrt_engine.cpp
middleware_recipes/common/benchmark/: fps_timer.cpp
middleware_recipes/common/include/: cipo_history.hpp  cipo_utils.hpp  feature_matching_utils.hpp  fps_timer.hpp  gstreamer_engine.hpp  kalman_filter.hpp  logging.hpp  masks_visualization_kernels.hpp  onnx_runtime_backend.hpp  tensorrt_backend.hpp  tracking_utils.hpp
middleware_recipes/common/sensors/: gstreamer_engine.cpp
middleware_recipes/common/tracking/: cipo_history.cpp  cipo_utils.cpp  feature_matching_utils.cpp  kalman_filter.cpp  object_finder.cpp  tracking_utils.cpp
middleware_recipes/common/visualizers/: cuda_visualization_kernels.cu  masks_visualization_engine.cpp
software_defined_vehicle/OpenADKit/: README.md  download-assets.sh  run-demo.sh
software_defined_vehicle/OpenADKit/AutoSpeed/: README.md  launch-autospeed.sh
software_defined_vehicle/OpenADKit/AutoSpeed/launch/: run_objectFinder.sh
software_defined_vehicle/OpenADKit/Docker/: xstartup
software_defined_vehicle/OpenADKit/DomainSeg/: README.md  launch-domainseg.sh
software_defined_vehicle/OpenADKit/EgoLanes/: README.md  launch-egolanes.sh
software_defined_vehicle/OpenADKit/Scene3D/: README.md  launch-scene3d.sh
software_defined_vehicle/OpenADKit/SceneSeg/: README.md  launch-sceneseg.sh
(+5 files in other folders)
